// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer render drawer content with extra className 1`] = `
<div
  className="tc-drawer-content theme-tc-drawer-content extraClass"
>
  <h1>
    Hello world
  </h1>
</div>
`;

exports[`Drawer render drawer content without extra className 1`] = `
<div
  className="tc-drawer-content theme-tc-drawer-content"
>
  <h1>
    Hello world
  </h1>
</div>
`;

exports[`Drawer should not render if no children 1`] = `null`;

exports[`Drawer should render 1`] = `
<div
  className="theme-tc-drawer tc-drawer theme-tc-drawer-transition tc-drawer-transition"
  style={undefined}
>
  <div
    className="tc-drawer-container theme-tc-drawer-container"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className="tc-drawer-content theme-tc-drawer-content"
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className="tc-drawer-actionbar-container theme-tc-drawer-actionbar-container"
      >
        <nav
          className="theme-tc-actionbar-container tc-actionbar-container nav tc-drawer-actionbar theme-tc-drawer-actionbar"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer should render stacked 1`] = `
<div
  className="theme-tc-drawer tc-drawer theme-tc-drawer-transition tc-drawer-transition theme-drawer-stacked stacked"
  style={undefined}
>
  <div
    className="tc-drawer-container theme-tc-drawer-container"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className="tc-drawer-content theme-tc-drawer-content"
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className="tc-drawer-actionbar-container theme-tc-drawer-actionbar-container"
      >
        <nav
          className="theme-tc-actionbar-container tc-actionbar-container nav tc-drawer-actionbar theme-tc-drawer-actionbar"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer should render using custom className 1`] = `
<div
  className="theme-tc-drawer my-custom-drawer tc-drawer theme-tc-drawer-transition tc-drawer-transition"
  style={undefined}
>
  <div
    className="tc-drawer-container theme-tc-drawer-container"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className="tc-drawer-content theme-tc-drawer-content"
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className="tc-drawer-actionbar-container theme-tc-drawer-actionbar-container"
      >
        <nav
          className="theme-tc-actionbar-container tc-actionbar-container nav tc-drawer-actionbar theme-tc-drawer-actionbar"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer should render using custom styles 1`] = `
<div
  className="theme-tc-drawer tc-drawer theme-tc-drawer-transition tc-drawer-transition"
  style={
    Object {
      "top": 45,
    }
  }
>
  <div
    className="tc-drawer-container theme-tc-drawer-container"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className="tc-drawer-content theme-tc-drawer-content"
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className="tc-drawer-actionbar-container theme-tc-drawer-actionbar-container"
      >
        <nav
          className="theme-tc-actionbar-container tc-actionbar-container nav tc-drawer-actionbar theme-tc-drawer-actionbar"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer should render with tabs 1`] = `
<div
  className="theme-tc-drawer tc-drawer theme-tc-drawer-transition tc-drawer-transition"
  style={undefined}
>
  <div
    className="tc-drawer-container theme-tc-drawer-container"
  >
    <div
      className="tc-drawer-tabs-container theme-tc-drawer-tabs-container"
    >
      <nav
        className="nav tc-tab-bar tc-drawer-tabs theme-tc-drawer-tabs theme-tc-tab-bar"
      >
        <ul
          className="nav nav-tabs tc-tab-bar-actions"
        >
          <li
            className="tc-tab-bar-action"
          >
            <button
              className="btn btn-link"
              disabled={false}
              onClick={[Function]}
              onMouseDown={[Function]}
              role={null}
              type="button"
            >
              <span>
                Tab 1
              </span>
            </button>
          </li>
          <li
            className="tc-tab-bar-action active"
          >
            <button
              className="btn btn-link"
              disabled={false}
              onClick={[Function]}
              onMouseDown={[Function]}
              role={null}
              type="button"
            >
              <span>
                Tab 2
              </span>
            </button>
          </li>
        </ul>
      </nav>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className="tc-drawer-content theme-tc-drawer-content"
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className="tc-drawer-actionbar-container theme-tc-drawer-actionbar-container"
      >
        <nav
          className="theme-tc-actionbar-container tc-actionbar-container nav tc-drawer-actionbar theme-tc-drawer-actionbar"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer should render without tc-drawer-transition class 1`] = `
<div
  className="theme-tc-drawer tc-drawer"
  style={undefined}
>
  <div
    className="tc-drawer-container theme-tc-drawer-container"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className="tc-drawer-content theme-tc-drawer-content"
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className="tc-drawer-actionbar-container theme-tc-drawer-actionbar-container"
      >
        <nav
          className="theme-tc-actionbar-container tc-actionbar-container nav tc-drawer-actionbar theme-tc-drawer-actionbar"
        />
      </div>
    </div>
  </div>
</div>
`;
